名词修正 “CosPlay”-->“cosplay”

--- a/steins_gate_0/docs/0024.md
+++ b/steins_gate_0/docs/0024.md
@@ -21,7 +21,7 @@
 绹：“在，在等……你！”  
 吹雪：“来啊，琉华君也是~”  
 琉华：“诶诶？！我并不是女……”  
-枫：“琉华君也在Cosplay哟~”  
+枫：“琉华君也在cosplay哟~”  
 琉华：“不，不好意思！马上脱下来！现在马上就脱下来……！”  
 由季：“啊啦，真是可惜，明明这么合身的。”  
 “真是热闹啊……”  
