--- a/steins_gate_0/docs/0056.md
+++ b/steins_gate_0/docs/0056.md
@@ -1,84 +1,113 @@
 > <big> **亡失流转的寂寥 - 05** </big>  
 > 1.064750  
-> [ 2010/12/16 ] 
+> [ 2010/12/ ] 
 
-“怎么样，爸爸。有什么头绪了吗？”  
-“没。很遗憾什么也没有找到。”  
-“这样啊……”  
-寻找未来真由理的养女——椎名篝，跟预想中一样举步维艰。  
-“我想问一下，已经去过警察那边了吗？”  
-“嗯，算是去过了。但是没有提出搜索申请。”  
-和想的一样，毕竟若要报案有人失踪，报案人也需要提供自己的身份证明。铃羽没办法采用方案。而且我之后也调查了一下发现，失踪者的搜查申请好像必须要由家人或者恋人这种相关人员提交才行。  
-“我昨天稍微黑进了警方的数据库，也没有相关的情报。”  
-“……我想也是呢。”  
-“这么说的话，冈伦也看过了？”  
-“只是不像你那样看内部情报。”  
-警察局的主页上也刊载着身份不明人员的情报。但是并没有涵盖很久以前的信息，情报不是很多。刊载的情报也只纪录着年龄、性别，还有服装和随身携带的物品。对于我们来说，没法只用这些信息判别椎名篝的身份。  
-“不过，就算是看上去和平的世界，身份不明和行踪不明的人还是有很多呢。”  
-我也认同这一点。身份不明的遗体数量，仅东京一年就有100具以上。规模扩大到全国范围，再算上过去的12年的话，就会变成非常庞大的数字。再加上行踪不明的人，这个数字在一年里就有10万以上。而且，在这之中有五分之一是10多岁的人。不过主要原因是离家出走，70%的孩子在被递交了搜索申请后的一周之内就被找到了。但是反过来，当然也有没有找到的人。事实上，有5%在长时间搜索后仍未知晓其行踪，就连是生是死都不得而知。椎名篝会不会也卷入事件之中，或者是——  
-我从沙发上站起来。  
-“嗯？冈伦，要去哪？”  
-“想稍微再调查一下。”  
-反正马上大学就到假期了，也没什么事情可做。而且，虽然一开始并不感兴趣，但不知不觉间我也在意起椎名篝这名少女的行踪。最为重要的是——  
-“谢谢，冈伦叔叔……”  
-“……这点事情没什么的。”  
-“不。不管怎么说还是谢谢你。”  
-在寻找篝的这段时间里，铃羽看来也不会再跟我说未来的那些事情了。每次见面的时候，如果彼此都重复着跟之前同样的对话，对现在的我来说是非常残酷的事情。哪怕只是能稍微转移一点注意力，对我来说都是帮大忙了。  
-——虽然这样说，找新线索当然没有那么简单。以防万一，我去了趟国会图书馆。铃羽和篝分开是1998年，我查阅了那段时间的报纸，想看看有没有不明身份者和奇怪事件之类的报道，却并没有找到相符的。铃羽也说过她是以几年为单位逐步寻找着篝才渐渐跳跃到这个时代，所以我明白不可能花几天时间就简单找到。即使如此，我还是感到了一丝疲劳，有些气馁。  
+怎么样，爸爸。有什么头绪了吗？
+没。很遗憾什么也没有找到
+这样啊……
+寻找未来真由理的养女，跟所想的一样举步维艰。
+问一下，已经去过警察那边了吗？
+嗯。也算是去过了。但是没有提出搜索申请
+和想的一样，提出这样的东西，提出者的身份也会受到确认，铃羽没有用这种办法。
+之后调查了一下了解到，行踪不明者的搜查申请好像是要由家族或者恋人这种关系的人提交才行。
+我昨天，稍微黑进了警察的数据库，也没有相关的情报。
+……我想也是呢
+这么说的话，冈伦也看过了？
+只是不像桶子那样看内部情报，呐
+至少在警察局的主页上刊载着身份不明的人员的情报。
+但是这些并没有涵盖很久以前的信息，情报不是很多。
+刊载的情报上只纪录着年龄，性别，还有服装和随身携带的物品。
+这对于我们来说，椎名篝这个少女身上没有能够用于对照的东西
+但是，就算是看上去和平的世界，身份不明和行踪不明的人还是有很多呢
+这点我也这么认为。
+身份不明的遗体数量，仅东京一年就有100具以上。
+这个规模在全国范围内扩大。如果再算上过去的12年的话，就会变成非常庞大的数字。
+更不要说加上行踪不明的人，这数字在一年里就有10万人以上。
+而且，在这之中有五分之一是10多岁的人。
+不过这之中主要原因是离家出走，在被递交了搜索申请后70%的在一周之内就被找到了。
+但是反过来，当然也有没有找到的人。
+事实是，有5%的在长时间之后仍未知晓其行踪，最后变成了不知其是死是活的状态。
+椎名篝也卷入事件之中，或者说是——
+我从沙发上站起来。
+嗯？冈伦，要去哪？
+想稍微再调查一下
+反正马上大学就到假期了，也没什么事情可做。
+而且，虽然一开始并不感兴趣，但不知不觉间我也在意起椎名篝这名少女的行踪。
+而且
+谢谢，冈伦叔……
+……这点事情没什么的
+不。就算这样还是谢谢你
+在寻找篝的这段时间里，铃羽也会说一些关于未来的一些琐事。
+每次见面的时候，如果彼此都重复着跟之前同样的对话对现在的我来说是非常残酷的事情。
+哪怕能稍微转移一点注意力的话，对我来说真是帮大忙了。
+——虽然这样说着。  
 
-“有什么事吗？”  
-“啊……”  
-“怎么了嘛？”  
-“不……”  
-“……？”  
-原来自己在无意识中呼叫了“红莉栖”。  
-“话说，感觉你比昨天更累的样子，没问题吧？”  
-“看起来是这样吗？”  
-“声调比平常低，结膜充血，难道你一直在查昨天说的那件事吗？”  
-“差不多……”  
-我把从铃羽和桶子那听到的以及我在国会图书馆查到的东西都告诉了“红莉栖”。  
-“真笨啊。这种事告诉我马上就能搞定了。”  
-“什么意思？”  
-“不知道我可以直接联网搜集情报吗？”  
-“啊啊，是吗……”  
-我都忘了，她是存在于计算机中的人工智能，这种事只是小事一桩吧。  
-“要我试试看吗？”  
-“马上就能做好吗？”  
-“不会花太多时间。”  
-“那就拜托了。”  
-“好的，稍等一会。”  
-之后，画面中的“红莉栖”做出了沉思的表情，也没有其他动作。  
-几十秒后。  
-“嗯……”  
-“有结果了？”  
-“网上搜索后，没有信息显示1998后有名为椎名篝的女性卷入事件或事故。  
-&emsp;&emsp; 找到了三个同姓同名的人。但考虑年龄他们是你要找的人的可能性很低。  
-&emsp;&emsp; 你想的话，一会也可以把他们的资料传给你。”  
-“不、不用了。”  
-冷静想想，在网上搜索人名的事铃羽应该早做过了。而且“红莉栖”说的不可能会错。我所认识的牧濑红莉栖，无论何时都是正确的。  
-“那，我能做的就这些了。之后就由你们去做吧，用只有你们才能用的方法。”  
-“只有我们才能用的方法？”  
-“到那个人失踪的地点附近去老老实实收集情报。虽说是个很老套的方法。”  
-“果然只能那样了啊……”  
-那些事铃羽也应该做过很多次了，应该很难再得到新情报。但是如果最后能做的事只有它的话，也就非做不可了。  
-
-“喵喵？凶……不对，冈伦？”  
-突然有人在背后叫我，慌张地转过身。  
-“果然是冈伦喵。在这种地方做什么喵？”  
-“菲莉丝，和……”  
-“下午好，冈部先生。”  
-“是你们啊，真是稀奇的组合。”  
-“刚才恰好碰到喵。看到琉华喵拿着一大堆东西，就帮他拿过来了。”  
-原来如此，仔细一看确实琉华子拿着很多东西，和菲莉丝拿着的加在一起相当可观。他本来打算一个人拿这么多东西吗？那个琉华子？  
-“喂，我说——”  
-“嗯？刚才有没有听到什么？”  
-“没事，什么也没有——”  
-“红莉栖”突然出声表达存在感，我慌忙把手机藏到身后。  
-“那个，在听吗？喂！”  
-“又听到了喵！难道刚才冈伦就是在跟它说话吗？”  
-“不，这是——”  
-“啊，等——”  
-其实就算她们知道了也应该没事。然而，我还是带着某种愧疚的情绪把App关了。
+0-21分40秒
+当然找新线索没有那么简单。
+以防万一去了趟国会图书馆。铃羽和篝分开是1998年。找了那段时间的报纸，想看看有没有不明身份者和奇怪事件之类的报道，却并没有找到相符的报道。
+铃羽也说过她来这个时代途中一路找了篝好几年。我也知道这事没那么容易。
+即使如此我还是感到了一丝疲劳，有些气馁。
+有什么事吗？
+啊……
+怎么了嘛？
+不……
+……？
+自己在无意识中把红莉栖叫了出来。
+话说，感觉你比昨天更累的样子，没问题吧？
+看起来是这样吗？
+声调比平常低。结膜充血。难道你一直在查昨天说的那事吗？
+差不多……
+我把从铃羽和桶子那听到的和我在国会图书馆查到的东西都告诉了“红莉栖”。
+真笨啊。这种事告诉我马上就能搞定了。
+什么意思？
+不知道我可以直接联网搜集情报吗？
+啊啊，是吗。
+忘了。
+她是存在于计算机中的人工智能。
+那这种事只是小事一桩吧。
+要不我试试看？
+快吗？
+不会花太多时间。
+那就拜托了。
+好的，稍等一会。
+之后，画面中的红莉栖做出了沉思的表情，也没有其他动作。
+几十秒后。
+嗯。。
+有结果了？
+网上搜索后，没有信息显示1998后有名为椎名篝的女性卷入事件或事故。
+找到了三个同姓同名的人。但考虑年龄他们是你要找的人的可能性很低。
+你想的话，一会也可以把他们的资料传给你。
+不，不用了。
+冷静想想，在网上搜索人名的事铃羽应该早做过了。
+而且“红莉栖”说的事不可能会错。
+我所认识的牧濑红莉栖，无论何时都是正确的。
+那，我能做的就这些了。之后就由你们去做吧。用你们才能用的方法。
+只有我们才能用的方法？
+到那个人失踪的地点附近去老老实实收集情报。虽说是个很老套的方法。
+果然只能那样了吗？
+但那些事铃羽也应该做过很多次了，应该很难再得到新情报。
+但是如果最后能做的事只有它的话，也就非做不可了。
+喵喵？凶......不不，冈伦？
+突然有人在背后叫我，慌张地转过身。
+果然是冈伦。在这种地方做什么呢？
+菲莉丝，和……
+下午好，冈部先生。
+是你们啊，真是稀奇的组合啊。
+刚才恰好碰到。看到琉华喵拿着一大堆东西，就帮他拿过来了。
+原来如此，一看确实琉华子拿着很多东西。
+和菲莉丝拿着的加在一起就相当多了。
+他原来打算一个人拿这么多东西吗？
+那个琉华子？
+喂，那个
+嗯？刚才有没有听到什么？
+没事，什么也没有——
+慌忙把手机藏到身后。
+那个，在听吗？喂！
+又听到了喵！难道刚才冈伦就是在跟它说话吗？
+不，这是——
+其实就算她们知道了也应该没事。
+啊，那——
+然而，我还是带着某种愧疚的情绪把app关了。
 在打电话喵？
 啊，啊啊……和熟人商量点事情
 商量……事情？
@@ -1060,4 +1089,4 @@ SERN发现篝是从未来来的，所以在搜寻她…这样？
 > (to be continued)
 ---
 
-| [←prev](./0054) | [home](../../) | [next→](./0056) |
+| [←prev](./0055) | [home](../../) | [next→](./0057) |
