--- a/steins_gate_0/docs/0011.md
+++ b/steins_gate_0/docs/0011.md
@@ -1,29 +1,29 @@
 > <big> **闭时曲线的碑文 - 06** </big>  
 > 1.129848  
-> [ 2010/12/04 吹雪视角 ] 真由理和她的Cosplay伙伴三人；吹雪的噩梦。  
+> [ 2010/12/04 吹雪视角 ] 真由理和她的cosplay伙伴三人；吹雪的噩梦。  
 
-到了12月，天空变暗的时间越来越早。在Cosplay店中选择商品的时候，外面的景色已经踏入了夜晚。中濑克美感到惊讶。拉着的拉杆箱传来沉甸甸的感觉。今天买的东西全都塞了进去，箱子都很明显地涨了起来。尽管如此，能够和因为Cosplay而互相认识的朋友们一起买东西，假期过得很充实。爽快的疲劳感。到车站的路上都踏着轻快的脚步。  
+到了12月，天空变暗的时间越来越早。在cosplay店中选择商品的时候，外面的景色已经踏入了夜晚。中濑克美感到惊讶。拉着的拉杆箱传来沉甸甸的感觉。今天买的东西全都塞了进去，箱子都很明显地涨了起来。尽管如此，能够和因为cosplay而互相认识的朋友们一起买东西，假期过得很充实。爽快的疲劳感。到车站的路上都踏着轻快的脚步。  
 “吹雪酱，快要跳着小步了吖~”  
 “啊，你明白？因为今天买了好多东西，很开心哦~满足满足！”  
 “多亏了吹雪酱，真由喜也愉快地购物了哦~谢谢你来陪我。”  
 “为了真由喜，这可是小事一桩呢！”  
 吹雪一边回答，一边朝着真由理抱了上去，但是被真由理轻巧地避开了。真由理虽然看上去呆呆的，但其实运动神经很好。  
-顺带一提，“吹雪”是中濑克美的Cosplay名。  
+顺带一提，“吹雪”是中濑克美的cosplay名。  
 中濑克美是高二学生。和同年的真由理对比起来，更加男孩子气和运动风。如果出男装Cos的话，围绕她的摄影师当中，比起男性，女性反而会更多。  
 “这样一来，冬季CM就没什么要担心的了。”  
 
 ![](../pics/0011-1.png)
 
-这一天，包含吹雪在内的朋友四人，为了购买制作Cosplay服装用到的材料，去了池袋的汤川屋、乙女路和东京HANDS，而后又到秋叶原去逛了几家Cosplay商店。这全都是为了年末的冬季CM（*Comic Market*）做的最后准备。  
+这一天，包含吹雪在内的朋友四人，为了购买制作cosplay服装用到的材料，去了池袋的汤川屋、乙女路和东京HANDS，而后又到秋叶原去逛了几家cosplay商店。这全都是为了年末的冬季CM（*Comic Market*）做的最后准备。  
 “虽然这样说，但是制作服饰的不就几乎只有真由理吗？  
 &emsp;&emsp; 不要太勉强哦，真由理酱……”  
-充满担心地说着话的，是枫。本名是来岛枫，直接用本名当作Cosplay名，是比吹雪大三岁的女子大学生。虽然枫很有女人味，三围也是像平面模特一样完美的标准值，但性格却有些内向。大学里，不管多少次邀请她参加选美比赛，她都是以“现充一样的活动好像很可怕”这种理由去拒绝。尽管如此，和吹雪她们一起参加CM之类的活动上的Cosplay，还是十分期待的。  
+充满担心地说着话的，是枫。本名是来岛枫，直接用本名当作cosplay名，是比吹雪大三岁的女子大学生。虽然枫很有女人味，三围也是像平面模特一样完美的标准值，但性格却有些内向。大学里，不管多少次邀请她参加选美比赛，她都是以“现充一样的活动好像很可怕”这种理由去拒绝。尽管如此，和吹雪她们一起参加CM之类的活动上的cosplay，还是十分期待的。  
 
 ![](../pics/0011-2.png)
 
 “这样的话，趁这个机会，大家来帮真由理酱一起做服装吧？”  
 阿万音由季提出了这样的建议。  
-五官端正，整体上都被和善气氛所包围着的女性，从同性的吹雪看来也是很美丽的人。翠绿直率的眼神，闪烁着的不是普通美女的桀骜不驯，而是让人感到亲切的光芒。阿万音由季是明路大学四年级学生，和枫属于同一个社团，在四人当中年纪最大。曾经一度因为要专心找工作而从Cosplay隐退，但仅仅半年就耐不住性子，复活了之前的兴趣。之后，和吹雪她们一起行动的机会也增加了。  
+五官端正，整体上都被和善气氛所包围着的女性，从同性的吹雪看来也是很美丽的人。翠绿直率的眼神，闪烁着的不是普通美女的桀骜不驯，而是让人感到亲切的光芒。阿万音由季是明路大学四年级学生，和枫属于同一个社团，在四人当中年纪最大。曾经一度因为要专心找工作而从cosplay隐退，但仅仅半年就耐不住性子，复活了之前的兴趣。之后，和吹雪她们一起行动的机会也增加了。  
 
 ![](../pics/0011-3.png)
 
