--- a/steins_gate_0/docs/0055.md
+++ b/steins_gate_0/docs/0055.md
@@ -1,6 +1,6 @@
 > <big> **亡失流转的寂寥 - 05** </big>  
 > 1.064750  
-> [ 2010/12/16 ] 
+> [ 2010/12/16 ] 冈伦路遇菲莉丝琉华子，察觉到自己对“红莉栖”依赖过重，开始拒接电话远离。
 
 “怎么样，爸爸。有什么头绪了吗？”  
 “没。很遗憾什么也没有找到。”  
@@ -78,981 +78,71 @@
 “又听到了喵！难道刚才冈伦就是在跟它说话吗？”  
 “不，这是——”  
 “啊，等——”  
-其实就算她们知道了也应该没事。然而，我还是带着某种愧疚的情绪把App关了。
-在打电话喵？
-啊，啊啊……和熟人商量点事情
-商量……事情？
-原来是这样喵。从后面看见冈伦一个人在嘟嘟囔囔，有点担心喵。
-我刚才的样子……让人担心了吗。
-不过被这么想也不奇怪。本来在这里打电话倒是没什么，但我是正面朝着手机在说话。
-太见外了喵。有什么烦心事跟我们说就好了喵。
-是，是啊。我可能帮不了什么忙……但只是商量的话……
-谢谢……不过，不是什么大……
-诶，等等。
-菲莉丝和琉华子应该从出生就一直住在秋叶原吧。
-而且两家都可以说在当地有一定名望。
-那么，姑且还是问问为好。
-其实我现在在找人。
-找……人？
-我把在找一个12年前在秋叶原失踪的少女的事告诉了两人。
-当然，隐瞒了她从未来而来，而且是真由理的养女的事。
-我很想问问为什么那个孩子要躲起来喵？
-虽然对不起，但真的不能说……
-呜喵~……
-只要告诉我关于这方面有没有想起什么就够了。
-唔恩——知道了喵。总之菲莉丝会去问问黒木的喵。
-黑木先生，是菲莉丝家的管家。
-我曾见过几次。
-菲莉丝是看上去就像个女仆。而黒木先生也不愧是菲莉丝的管家，一举一动充满了管家风范。
-想想，侍奉女仆的管家也是够奇怪的了。
-另外我还会若无其事地问问MayQueen+Nyan2的主人们的喵。
-我也会去问问爸爸和香客们的。
-不好意思。那就帮大忙了。
-黒木和琉华子父亲的人脉广，成功的可能性要比我们这么瞎找要高得多。
-能找到点线索就好了。
-话说回来，琉华子，怎么拿这么多东西？
-啊，这是那个……昨天说过的，父亲的客人要来的事。
-其实客人中的一个人在我们家住下了……
-所以就去买一些必需品了喵
-既然是琉华子的父亲的客人，那就应该是相当年长的人吧。
-光从昨天说的话来看，还可能是个有特殊爱好的人。
-那真是辛苦了……
-不。我也有点开心……
-开心……吗？
-虽说琉华子继承了父亲的血脉，虽然还未觉醒，但就算有那种的爱好也不奇怪。
-劝你不要太过深入为好。
-诶？哈啊……
-如此警告后，便和菲莉丝她们分别了。
-——虽然分别了
-……嘿~咻……嘿~咻……
-琉华喵，没问题吧喵？都在晃了喵。
-没，没问题。我……也是……这种程度……
-……
-那个……可以的话喝杯茶再走吧。
-就不麻烦了。客人也还在家里吧。
-虽然……是这样……
-最后还是看不下去，帮着把东西搬了过来。
-顺便一提，菲莉丝途中回店里了。
-话说回来，这么多东西，再怎么说也不能一个人拿吧？
-我最近也渐渐有力气了哦。凶真——冈部先生教我的空挥也……啊……
-空挥——
-那是在琉华子因为太像女孩而烦恼时，我给他布置的修行。
-清心斩魔流……吗……
-太过中二，完全笑不出来。
-对不……起……
-回想起来，也真亏他那么配合我的胡说八道啊。
-琉华，回来了？
-社务所深处的居所中传来琉华父亲的声音。
-是，我马上过去
-那我就到这吧。
-好的，谢谢你了，冈部先生。
-琉华子深深低头道谢后，我转身离开了柳林神社。
-回去的路上，我再次想起两人的话
-太见外了喵。这什么烦心事跟我们说就好了喵。
-是，是啊。我可能帮不了什么忙……但只是商量的话……
-被这么说我才察觉到。
-我最先商量的不是别人，而是红莉栖。
-无意识之中打开了App，去找她说话。
-她——并不是真的红莉栖。
-但是，那个声音，动作，话语——
-……
-一切都让我想起红莉栖。
-一切都在唤起我那拼命想要扼杀的回忆。
-手机来电。
-对方是——“红莉栖”
-一定是来抱怨我刚才突然把她的电话挂了的事吧
-这行为也不愧是“红莉栖”。
-……
-但我并没有接。
-之后那一天又打了好几次电话过来，我还是都没接。
-——美国，加利福尼亚州。
-真是的，为什么我非要做这种报道不可啊！
-被导演要求马上赶到现场的记者，
-——杰西卡·艾蒙德现在非常气愤。
-自己的梦想是好莱坞，也在电影中出演过一次了，可为什么还得来报道这种莫名其妙的事件呢？
-无论什么都好，给我工作吧。是你自己这么说吧？
-我确实是说过，但是这种事件——
-好心好意地用了你这种过气女演员，你不感谢我还反过来怪我？
-你再说一次？
-还是说你又要在这里放弃工作逃跑吗？做什么都是半桶水，你这幅样子，小心孩子的抚养权都被人给抢了。
-……！
-对无法还嘴的自己感到悔恨。
-多的只有无聊的自尊。
-梦想做个女明星去了好莱坞，结果演了个B级电影的小角色后就再没后续，生子后又回到了现实中。这就是自己。
-但是孩子真的很可爱。
-无论做什么，哪怕是啃石头，也想养育孩子。
-那……现场在？
-那片树林深处。
-被催着进了树林，她看到了。
-呜……
-那是多具惨不忍睹的尸体。
-如此，国内失踪的研究者已达五人——其中三人是AI的研究者。
-当局怀疑这与反对人工智能技术发展的原教旨宗教主义者集团的暗中活动有关，正在继续调查。
-接下来是现场报道。杰西卡！
-这边由杰西卡·艾蒙德为您带来现场报道。关于今早在现场发现的遗体，最初认为是人类的遗体——
-警方调查后，发现是多具黑猩猩和红毛猩猩等猿类的尸体。
-因为一部分尸体的脑部及头部出现缺损，警察将其作为猎奇性事件，呼吁当地居民加强警戒
-喂，冈部。你之后有课吗？
-没，今天没课了。
-是吗，那要不去哪吃个饭？
-反正又是咖喱吧？东海厨房？
-昨天有了点临时收入，今天可能去Mondi奢侈一把吧。
-我就算了。这个月手头有点紧。
-是吗。那就下次吧。
-啊啊
-下课后和友人间的对话。
-已经习惯了这种感觉。
-夏天之前还觉得大学里没有我的容身之所，现在也感觉没那么糟了。
-当时候我认为自己是特别的。
-但现在不是了。
-只要自己主动进入生活的循环中，自然而然地就会有自己的容身之处。
-人是可以改变的。
-不，是不得不改变。
-事到如今，我才明白了这点。
-真的是事到如今——
-好，那就回……嗯？
-转头走向玄关的一瞬间，瞄到了一个熟悉的人影。
-那是……
-（……雷斯吉宁教授？）
-因为我所在的大学对接受留学生很积极，在学校里看到外国人并不奇怪。
-但——
-不在……
-慌忙追上去，但已经找不到刚才看到的那人了。
-是我看错了吗？
-不过想想的话，就算教授来这所大学也不是什么奇怪的事。
-说不定，就是约好来见我的导师井崎的。
-而且井崎之前也很想和雷斯吉宁教授保持深度交流的样子。
-（下次见到教授问问吧……）
-最后看了一眼那疑似教授的人物消失的方向，我离开了大学，前往秋叶原。
-从电器街检票口出来，眼前的广播馆一如往常地耸立着。
-楼顶上镇坐着铃羽坐来的时间机器。
-想想虽然不是什么有人常来的地方，但这么久还没被发现也真是了不起。
-这也都多亏了菲莉丝。
-菲莉丝租下了并封锁了楼顶。
-不过我也不是来这察看时间机器的。
-昨天从Lab回家后，菲莉丝和琉华子来了联络。
-虽然琉华子问了父亲，菲莉丝问了管家黒木，果然还是没有任何线索。
-想想也是当然的。
-如果向警察提出搜索请求说不定会有些以前留下的线索，因为那方面的手段还没有尝试过。
-不过菲莉丝还说了一件有意思的事。
-但是，听说了有双马尾的幽灵出现的事。
-双马尾的幽灵？
-是喵。听说那个幽灵隔几年就出现一次，找人问有没有见过一个小女孩。
-而且不论过多少年样子都不变，最近已经被传说成了双马尾的幽灵。
-……怎么想说的都是铃羽。
-她要是知道自己被看作幽灵，会露出什么表情呢？
-脑补着那个样子，我强忍住笑走向了广播馆。
-目的当然是为了获得篝的情报。
-篝和铃羽分开，就是在这个广播馆。
-也就是说最有可能有线索的地方，也是这里。
-到广播馆里挨家问了各个店，但没有得到任何信息。
-想必铃羽之前也做过这些询问了吧，这结果说当然也是当然。
-但是，也不能因此就这么放弃。
-零件商店。
-商业设施。
-甚至是后街小路。
-我之后为了打听篝的事，转遍了秋叶原。
-然而没有得到任何有用的情报。
-倒是和菲莉丝说的一样，有人提到了双马尾幽灵的事。但关键的篝的行踪，谁也不知道。
-说到底，如果是有一个孩子被拐卖、遇到事故这种醒目的事件的话，可能会有目击证言。
-但若是失踪就另当别论了。
-假设椎名篝是以自己的意志“失踪”的，那么一个10岁的小孩一个人在路上走，也不是那么引人注目的事。
-还是在10年前发生的话，就更不可能有人记得了。
-再次思考，这种时候最好的办法是什么？
-不能靠警察之类公共机构的话，就只剩——可能和地下世界有关联的人物了。
-地下世界……吗
+其实就算她们知道了也应该没事。然而我还是带着某种愧疚的情绪关掉了APP。  
+“在打电话喵？”  
+“啊，是……和熟人商量点事情。”  
+“商量……事情？”  
+“原来是这样喵。从后面看见冈伦一个人在嘟嘟囔囔，我还有点担心喵。”  
+我刚才的样子……让人担心吗？不过被这么想也不奇怪。本来在这里打电话倒是没什么，但我是正面朝着手机在说话。  
+“太见外了喵，有什么烦心事跟我们说就好了喵。”  
+“是、是啊。虽然我可能帮不上什么忙……但只是商量的话……”  
+“谢谢……不过，不是什么大……”  
+诶，等等。菲莉丝和琉华子应该从出生就一直住在秋叶原吧。而且两家都可以说在当地有一定名望。那么，姑且还是问问为好。  
+“其实我现在在找人。”  
+“找……人？”  
+我把在找一个12年前在秋叶原失踪的少女的事告诉了两人。当然，隐瞒了她从未来而来，而且是真由理的养女的情报。  
+“那孩子为什么要一直躲起来喵？让人超疑惑的喵。”  
+“虽然对不起，但这方面我真的不能说……”  
+“呜喵~……”  
+“只要帮我问问有没有关于这方面的线索就够了。”  
+“唔嗯——知道了喵！总之菲莉丝会去问问黑木的喵。”  
+黑木先生，是菲莉丝家的管家，我曾见过几次。如同菲莉丝是看上去就像个女仆一样，侍奉她的黑木先生看上去就是个管家，一举一动充满了管家风范。仔细想想，侍奉女仆的管家也是够奇怪的了。  
+“另外我还会若无其事地问问 *MayQueen+Nyan²* 的主人们的喵。”  
+“我也会去问问爸爸和香客们的。”  
+“不好意思，帮大忙了。”  
+黑木和琉华子父亲的人脉很广，成功的可能性要比我们这么瞎找要高得多。能找到点线索就好了。  
+“话说回来，琉华子，怎么拿这么多东西？”  
+“啊，这是那个……昨天说过的，父亲的客人来了我家。其实其中一位客人在我们家住下了……”  
+“所以就来帮忙买了一些必需品的样子喵。”  
+既然是琉华子父亲的客人，那就应该是有一定岁数的人吧。光从昨天说的话来看，还可能是个有特殊爱好的人。  
+“那真是辛苦了……”  
+“不，我也有点开心……”  
+开心……吗？琉华子姑且继承了父亲的血脉，虽然还未觉醒，但就算有那种爱好也不奇怪。  
+“劝你不要太过深入为好。”  
+“诶？哦……”  
+如此警告后，便和菲莉丝她们分别了——虽然是这么打算的。  
+“……嘿~咻……嘿~咻……”  
+“琉华喵，没问题吧喵？都在晃了喵！”  
+“没、没问题。<abbr title="此处强调男性自称">我</abbr>……也是……才这种程度……”  
+“……”  
 
-说完立刻从脑子里驱散了这种想法。
-太蠢了。
-像这种中二病的思考方式。
-我早就已经摒弃了。
-这么说起来……
-曾经也有像这样，在秋叶原街上满大街找东西找到筋疲力尽的时候的事情呢。
-虽然那时对象是物而不是人。
-IBN5100。
-跟铃羽在过去世界寻找的东西一样，半年前我在α世界线的秋叶原也找过。
-那时候——红莉栖也在身边。
-我和红莉栖得知琉华子老家仓库有IBN5100后，合力把那笨重的PC搬了回来。
-你这家伙啊，别正面啊。这样我不就只能倒着走了吗。横过来搬啊。
-回想起来当时那家伙，老是在抱怨着。
-不服输，又傲慢，但却又比其他人更加害怕寂寞。
-……
-我又在无意识之间从口袋里掏出了手机。
-『Amadeus』
-可能是因为昨天有数次电话没有接，今天一次都没有打过来。
-在盯着整齐排列在APP中的Amadeus图标一段时间之后。
-最后，我仍是没有启动它，把手机收回了口袋里。
-…………
-呜……
-回到Lab等着我的是，满脸疲态的桶子。
-不用问。
-一筹莫展的样子。
-铃羽不愧是已经持续寻找了半年以上，表情和平时没有变化。
-桶子看见我也没有问“怎么样了？”这样的话。
-应该是看我表情就察觉到了吧。
-稍微想想，到现在为止的搜索铃羽也应该都做过了。我们这种外行人再重新弄一遍，根本不可能有新发现的吧。
-桶子说出了我心中所想却没有出来的话。
-谢谢帮忙。你们不用勉强自己了。接下来的搜索我一个人来就行了。
-铃羽并不准备放弃。
-不，等一下，铃羽。我想说的是——
-让你们这样勉强自己是在过意不去。篝这件事也是我自己的责任
-说什么傻话。孩子的责任就是父母的责任啊常考
-爸……
-呐，刚才的话怎么样？是不是很有爸爸范。这样的话说着“最喜欢爸爸了”什么的，抱过来也是可以的哟也是可以的哦
-哈……
-看着这两个人，不知为何会产生奇妙的感觉。
-刚刚见面那会完全就是陌生人的感觉。
-现在已经是一家人的样子。
-而且按年龄来算，父亲和女儿基本同岁。
-铃羽先不说，对于桶子来说到底是怎样的心情啊。
-总之我想说的是，仅仅胡乱地找是不行的
-那，你说该怎么做？
-俗话说各司其职，这种情况果然拜托专业人士才是最好的办法。
-专业人士？
-这种情况，拜托精通里世界情报的人是最妥当的吧常考
-和我的思考回路完全一样，我的头开始隐隐作痛
-有什么头绪吗？
-啧啧啧。别把你爸看的太简单呐。我虽然是肥宅但是我的人际关系还是很广的呢
-体型也很宽广呢
-不要开玩笑啊
-话说，你是认真的吗？你真的跟里世界的人有联系？
-稍微试着联系一下
-这么说着的桶子，没听我和铃羽的回应，取出手机开始写短信。
-难道，是真的？
-但是，那个世界的人也用短信取得联络吗？
-……你怎么认为，叔叔？
-如果实际上真有这样的人物的话，虽然也是可以拜托一下……
-嘛，想想看黑客也是在暗中工作的人呐。
-因为这种人就在自己身边，如果这么说的话桶子所说的人也可能是真实存在的。
-好，发送。接下来就是等回信……
-嗯？
-哦？
-诶？已经有回复了？
-嗯……说是现在在朝这边赶过来
-对方真是好说话呢
-总比拖拖沓沓好吧？
-的确如他所说。
-桶子又一次编辑了短信的样子
-大概是把这边的地址发送过去。
-接下来只要等那个人过来了。
-接着手机响了。
-【不是桶子的而是我的。
-难道是“红莉栖”？
-看了下来电人，是琉华子。
-真少见。通常都是顾虑着让真由理传话的，或者就是通过RINE发送短信。
-话说，难道桶子说的“精通里世界情报的人”是琉华子？
-日本全国的神社暗藏着搜罗机密情报的网络，琉华子实际上是其中的一员……之类的。
-……不可能吧
-一不小心就犯了以前的老毛病。
-不接的话是在说不过去。】【校注：以上用方括号括起来的全部都没有出现，应该是游戏文本里，但是在视频里没有出现】
-喂，琉华子？
-啊，冈部先生。对，对不起，现在有空吗？
-那个……其实……我，想跟你商量一点事情……
-商量？
-……现在可以碰个面吗？
-现在？电话里不方便说吗？
-对……稍微有点……
-现在，吗……
-这边交给铃羽和桶子真的好吗……
-……抱歉。接下来这边有客人过来
-很在意桶子认识的到底是怎样的人。
-这……样吗……
-在这之后不行吗？
-在这之后，我也有事情……
-这样啊……
-那，那样的话……
-在琉华子想要说什么的时候——
-听到的外面上台阶的脚步声。
-然后是敲门的声音。
-来了，请进
-抱歉琉华子。客人来了。之后再联络——
-我一时语塞。
-什——！！
-开门进来的人物。
-那是。
-(——这家伙！又一次！)
-…………
-是桐生萌郁。
-上次见面是在ATF的研讨会上。
-那个……冈部先生？怎么了？冈部先生！？
-请用茶
-……
-……
-对那沉默着稍稍低头的桐生萌郁的样子，我的心脏如同被挤压一般的钝痛着。
-(为……什么……)
-为什么，这家伙会和桶子？
-脑中浮现出数个问题。
-怎么了，冈伦？
-没什么……
-…………？
-萌郁微微歪了歪头，避开了视线。
-我们和SERN没有牵连。
-所以，萌郁不会杀真由理。
-不会杀真由理。
-不会杀真由理。
-不会杀。
+“那个……可以的话喝杯茶再走吧。”  
+“就不麻烦了。客人也还在家里吧。”  
+“虽然……是这样……”  
+最后还是看不下去，帮着把东西搬了过来。顺便一提，菲莉丝途中回店里了。  
+“话说回来，这么多东西，再怎么说也不能一个人拿吧？”  
+“我最近也渐渐有力气了哦。凶真——冈部先生教我的空挥也……啊……”  
+空挥——那是在琉华子因为太像女孩而烦恼时，我给他布置的修行。  
+“清心斩魔流……吗……”  
+太过中二，完全笑不出来。  
+“对不……起……”  
+回想起来，也真亏他那么配合我的胡说八道啊。  
+“琉华，回来了？”  
+社务所深处的居所中传来琉华父亲的声音。  
+“是！我马上过去。”  
+“那我就先回去了。”  
+“好的，谢谢你了，冈部先生。”  
+琉华子深深低头道谢后，我离开了柳林神社。  
 
-对自己说了数遍之后，总算是平息了胸中的不安。
-叔叔。脸色很差啊。没关系吗？
-别在意……。比起这个桶子……说明一下
-啊，这位是桐生氏。编辑公司的专业写手。
-桐生……萌郁……
-安静地递过来的名片上写着“Arc Rewrite”会社的名字。
-桶子简短的向萌郁介绍了我和铃羽的事。
-呐，桶子。你为什么……认识这个人？
-之前，桐生氏负责的杂志在收集制作有关于秋叶原都市传说的特刊。
-当时，她联系我说想就我的工作进行采访
-我的工作你也知道，不是那种能公开宣传的事情对吧？所以取材这件事我郑重地拒绝了
-但是，我平时不是一直很注意不留下痕迹的嘛。然而桐生氏却顺藤摸瓜找到了我，这让我很在意
-然后见了面就发现像现在这样，是个超棒的美女
-追寻都市传说的美女写手。想想超萌的好不好
-然后就这样熟识了吗。
-看着面对美女在那不成样子害羞着的桶子，铃羽板起了脸。
-虽然没说出来，“明明已经有妈妈了”这种想法已经表现在脸上了。
-另一方面，萌郁完全不关心桶子这边，还是挂着一张扑克脸在那里摆弄着手机。
-这家伙，就算到现在也没用智能机而仍然用的翻盖机吗。
-嘛，虽然不是专门负责找人的，但是她看上去对秋叶原的事情很详细。而且好像也很清楚里世界的东西，所以能够拜托她什么的
-……听说……在找人……
-嗯。实际上。想让你找一个12年前在秋叶原失踪的女孩子
-桶子告诉了桐生萌郁大概的事情原委。
-萌郁只是沉默着。把桶子话用很惊人的速度输入手机里。
-我只是沉默着。观察着萌郁的一举一动。
-过去曾隶属Rounder的女人
-可能现在也仍是这样。
-到底，拜托这个女的是不是正确的选择。
-这次和萌郁接触纯属偶然。
-就算脑子里已经了解了，但是心里上还在排斥着。
-在β世界线，桐生萌郁和我们没有任何交集。
-那是当然的。
-就是为了这样我才选择了β世界线。
-为此做出了牺牲红莉栖的选择。
-……就是说……找到这个名叫椎名篝的人就行了吧……？
-就是这样。怎么样？
-……可以……试试看……
-真的？
-……但是……能不能找到……不确定……
-当然，那样也是没办法的事
-按常理来考虑的话，我和桐生萌郁本来应该没有交集。
-当然，在秋叶原街上擦身而过的可能性还是有的。
-事实就是，上个月ATF研讨会因为采访雷斯吉宁教授和真帆，和我碰上了。
-但是，并没有像现在这样直接扯上关系的事情。我擅自这么认为。
-这也是，已经被既定好的命运吗？
-我和桐生萌郁在称为时间的轨迹上有所交集，是类似这样的宿命吗。
-如果是这样……不用像现在这样躲着她，干脆就像这样监视着她的一举一动会显得更好。
-听着桶子和萌郁的谈话，我一边像这样考虑着。
-那么，报酬就用成功报酬。其他的经费由我们这边支付，ok？
-……没问题
-冈伦和铃羽也觉得这样可以吗？
-我只要有人帮忙就可以了
-……我也……觉得没问题……
-那么，这样就算契约成立
-……
-萌郁微微点头，之后听取了关于篝的线索——失踪时的服装，特征样貌什么的，然后离开了Lab。
-呼……
-心里一直紧绷的弦松了下来。我瘫坐在沙发上。
-叔叔。真的没关系吗？
-没事……只是稍微有点紧张……
-虽然现在才想到，我从口袋里取出镇定剂含在嘴里。
-叔叔，你认识刚才叫桐生萌郁的人吧
-诶？
-被看穿了？
-真的？冈伦什么时候？
-……为什么这么认为？
-一看就知道了
-不愧是只有经过修罗场里的人才特有的敏锐。
-……不。不认识……
-在α世界认识的？
-…………
-知道了。不会再继续追问了，我也会相应的保持警戒。
-……目前为止这样就行了
-究竟在说什么？
-刚才很紧张之类的话啦
-我懂的。桐生氏那种巨乳美女身材拔群又有眼镜娘属性啊。换谁都没办法不紧张。
-是这样呢……
-…………
-反正既然扯上关系了，就这样尽可能利用一下也是可以得。
-不知是因为她从面前消失的原因，还是精神安定剂的效果。我像这样考虑着。
-只是不知道下回和她碰面的时候还能不能这么想。
-琦玉县和光市， 脑科学综合研究机构·日本分部。
-那天，比定屋真帆拼命忍着哈欠，然而并没有忍住，那张大的嘴巴占据了她的娇颜。
-呼啊~……
-前一天晚上，和“红莉栖”聊得太尽兴，等回过神来已经是深夜，这是主要原因之一。
-最初的谈话内容还是跟试验研究有关，然而之后话题变来变去，话题不知从何时起又转到了冈部伦太郎身上。
-据说是冈部最近几天都无视着“红莉栖”的联络。
-最初冈部连续8次不接电话的时候“她”的愤怒，和现在比起来，根本就是九牛一毛。
-可以说真帆是第一次窥视到了牧濑红莉栖少女的一面也不为过。
-不禁觉得很可爱，至今被各种调戏的真帆针对这个好好的戏弄了一下“她”，不知不觉时间就飞快地流逝了。
-而且本应该睡觉的真帆却因此异常的精神。取出了红莉栖留下的笔记本电脑。
-然后，在分析密码时遇到各种各样的问题的这段时间里，外面已经天亮了。
-密码……呢……
-果然，还是拜托专业人士比较好吧……
-在说什么呢？
-呀！？
-突然，背后传来声音，真帆吓得差点跳起来。
-哈哈哈，不至于吓成这样吧
-教，教授。回来了啊
-刚刚回来呢
-说着放下手里的便利店袋子。
-因为他10分钟之前出去吃饭，本以为还不会回来呢。
-话说回来，日本的便利店食物种类好多真的是太棒了！
-就算每天吃不一样的便当，一周之后立刻又会有新品便当出现。
-而且每家店的味道也不同，每天吃便利店的便当也吃不厌。
-只吃便利店便当的话，会营养失衡的哟
-哈哈哈，和美国的食物比起来这可是相当健康的
-再说首先，关于吃饭这一点，我可不想听真帆说教呢
-呜……
-确实，真帆自己也不怎么均衡饮食。
-不如说靠谷物食品和营养剂的时候很多，是非常不健康的饮食生活。
-话说，你想要找专业人士拜托什么？
-啊……那个是这个……没什么。没什么事
-让雷斯吉宁知道这事也并没有什么不妥。
-但是不知为何真帆还是糊弄了过去。
-是吗？如果有我能帮忙的事一定会帮忙的哦
-非常感谢。真到那时候就拜托您了
-边说着社交辞令边站起来，就这样向门口走去。
-真帆？你要去哪？
-兼带着转换心情，去秋叶原一趟
-作为转换心情的话，走的还真是远呢
-呜……
-如果老实的说是去见Rintaro的话我就许可了
-不，不是这样的……！
-难道不对吗？
-……顺便，路过的时候去见见也不是不行【校注：教科书般的……】
-冈部在秋叶原建立了Laboratory。这是昨天晚上“红莉栖”告诉真帆的。
-之前好像在避开Lab，最近却又再次出现在那里。
-对于这个Lab，真帆稍微有点感兴趣。
-哼~~
-先，先声明一下，不是这样的啊。并不是你说的那样的
-我还什么都没说呢？
-呜……总之，今天的研究先停止
-帮我和Rintaro问声好
-
-“红莉栖”也好、雷斯吉宁也好，真帆无法理解他们为什么总是那样一会就想扯到恋爱八卦上
-（话说，那种也算性骚扰吧，以当今世道来说）
-最主要的，真帆想要拜访冈部所在的地方并不是因为想要见他
-果然想要与冈部再见次面，是想获取些与红莉栖的笔记本电脑密码有关的线索
-虽然冈部说不知道，但是真帆认为比起一个人瞎猜，肯定他知道的要多得多
-那是从冈部对『Amadeus』的态度上看出来的
-也可以说是女人的直觉
-边思考着这些事边换乘电车，从秋叶原车站检票处出来的时候
-……？
-真帆感觉到被谁注视着，回过了头
-明明是平常时间段，车站却人烟混杂
-但是在那些人中没有真帆所感觉到的人
-…错觉…吧
-并不是对谁说而是一个人嘟囔着，她再次迈出了脚步
-未来小道具研究所的地址从“红莉栖”那里得知了
-虽然对秋叶原的地理位置不是那么详细，不过如果到了万不得已的时候只要让“红莉栖”当向导就行了
-只是，突然到访的时候，冈部不在的话该怎么办呢
-虽然有些不安，不过如果真是那样，就乖乖地回去罢了而已
-走马观花地扫过各式各样店铺陈列出来的商品，就这样行走了一段时间——
-……
-果然，感觉到了谁的目光
-但是，回头一看也没发现类似的人
-……
-再次走了起来，转过拐角进入了小路
-然后真帆从怀疑变成了确信
-脚步声——
-那从真帆的背后传来
-当然，只是那样的话是很正常的
-夜晚的路上遇到逼近的脚步声就毫不犹豫地加快脚步，然后马上一个男的无趣地从边上超了过去，这样的事有过好几次
-但是，这次不是那样，不知为何真帆这么确信着
-试着加快脚步，然后跟着的脚步声也加快了，放缓脚步的话，脚步声也缓慢了
-额…
-在电影里看到这种情景的话，换做是自己就踹一脚过去作为见面礼了——虽然真帆总是这么想的，但是实际遇到这种情况的话连回头都做不到
-焦躁地用手从口袋里取出了手机
-脑中没有出现打电话报警这个选项
-脑中浮现出的只有现在想要去见的人物的名字
-从电话记录中找出那个名字，用颤抖的手指按下了拨号按钮
-（拜托了…）
-呼叫音与脚步声相重叠
-（冈部，救我…！）
-脚步声逼近了身边
-正要忍不住逃跑的时候——
-喂？
-从话筒的那边传来了声音
-喂，冈部先生！？我是比屋定！
-现在就在你的Lab的附近——！
-但是，真帆没机会说出更多的话来
-感觉到被谁张开双手紧紧抱住的时候，手机从真帆的手中掉了下去
-这是…？
-接过默不出声地递过来的纸张，我向桐生萌郁提出了询问
-就在十分钟前，萌郁向桶子联络说正往Lab过来
-正如她说的，萌郁出现在了这里
-可以认为她联络过来的时候已经到这附近了
-如果谁都不在的话，她会怎么办呢？
-…报告书
-貌似记录了至今为止的调查结果
-接过一叠纸的手略微地颤抖着
-在萌郁面前的不安，仍有一些残留在我心中
-即使这样，大概在接到联络后马上服用的精神安定剂起作用了，与前几天相比已经好了很多了
-怎么样？叔叔
-果然，没这么容易就能找到的啊…
-是么…
-多少有些期待的吧
-铃羽的声音明显带着些失望
-篝…在哪里做着些什么呢…
-无法回答那个疑问，只是默默地翻着报告书
-嗯？
-怎么了？冈伦，难道有什么有用的线索吗？
-不，虽然不是那样…
-让我看看
-我直接把报告书交给了铃羽
-指出了在意的地方
-“调查中发现了一件令人在意事情”
-“那就是在这一两个月中，寻找叫椎名篝的女性的人除了我们以外还有其他人”
-…怎么回事
-…如同你读到的…
-也就是说——
-这是，打断我思考的来电声响了起来
-平时的话，都是就这么无视掉，之后再回电过去的——
-抱歉，接个电话
-偏偏这个时候，不知为何觉得不得不接
-这样感觉
-喂？
-喂，冈部先生？我是比屋定！
-真帆非常急促的声音，让紧张感急速地升高，我的声音也自然地大了起来
-怎么了，比屋定小姐——
-现在，就在你的Lab的附近——！
-之后，听到了什么东西搓揉的声音和撞击的声音
-比屋定小姐？比屋定小姐，怎么了！？
-然后，就这样声音断了
-……
-冈伦？发生了什么？
-那个声音——很明显发生了什么不好的事
-朋友被人袭击了！
-等…真的？朋友是指？
-觉得继续回答桶子的问题都嫌麻烦，我抓住手边能当武器的东西就飞奔出了Lab
-……！
-真帆说了在Lab附近
-要说从车站过来的路线并且是人烟稀少的地方的话，大概就是——
-到Lab跟前的小巷子
-在那里看到了人影
-身型修长的人…可以看见在那身后有个小小的人影扭动着
-那是…！
-没错，那个身高就是真帆
-住手…放开我…！
-真帆被什么人紧紧抓住，拼命地挣扎着想要逃走
-比屋定小姐！
-唉？
-——？
-听到我叫出的声音，控制着真帆的人惊讶地回过头来
-（…女的？）
-于是才发现，那是个女的，而且还注意到她不是日本人
-冈部…先生？
-喂，放开比屋定小姐！
-……
-语言不通吗？
-不，大致的意思应该能通过气氛明白吧
-放开…那个孩子
-我用手上拿着的东西摆好威武的架势给对方看
-发现拿的东西偏偏是荧光棒saber，即使那样吓唬人还是没问题的
-再说一遍，把那孩子——
-不是的，冈部先生
-唉？
-不是的？
-什么？
-Oh——
-于是那个女人放开抱着的真帆，露出了满脸笑容并张开双手向这边走了过来
-Are you Maho's boyfriend?
-啊？唉？那 等等——
-比我问出“怎么回事”还早一步，她的双手伸向了我的背后——
-被牢实地抱住了
-所以说，都说了不是了……
-搞不清到底是怎么回事，只知道我的胸口被有弹性的某样鼓起的东西压着，什么都做不了只能傻傻地站在那里
-那么，这位是比屋定小姐的熟人吗？
-对不起，因为我太着急了……
-I'm Judy,Judy Reyes, Pleasure meeting you,Mr.Okabe
-名叫朱蒂·雷斯的女性带着太阳般灿烂的笑容伸出了右手
-啊，那个…奈斯凸米特YO…
-呵呵…说日语就行了
-唉？教授会说日语吗？
-恩，是的
-…不知道呢，但是，为什么？
-呵呵，女人到了我这样的年纪的话，有很多情况的呢
-恶作剧般地抛媚眼也挺有模有样的
-那么，重新自我介绍。朱蒂，朱蒂·雷斯。多多指教
-对于再次伸出的手，我牢牢地握了上去
-冈，我叫冈部伦太郎
-雷斯教授，据说是为了出席这次将在日本召开的AI关联的学会而来到了日本
-说到教授的话，是维克多·孔多利亚大学的吗？
-研究的是精神生理学
-精神…？
-是指精神生理学。也就是，对于大脑活动所带来的心理活动以及心病之类的进行研究
-从那个方面来讲，可以说相比我们的研究能对人们带来更多的用处也说不定
-没有那样的事哦，你们的“Amadeus”的话，依据今后的发展，很有可能成为有用的技术
-能这样说让我很高兴
-简单来说，就是来到日本的雷斯教授，偶然在秋叶原看到了真帆并抱住了她想吓她一跳，这么一回事的样子
-但是，雷斯教授真是坏。居然从车站一直跟着过来
-跟着？真帆？我吗？
-恩……跟在我的后面吧…一直？
-没有那回事哦，我只是刚才在那边的店里偶然看到了真帆你，想要吓你一跳而已哦
-唉？
-听了雷斯教授的回答，直到刚才都放心下来的真帆的脸色变了
-比屋定小姐，被跟踪了吗？
-恩…的确是感觉到了…
-雷斯教授，有看到什么可疑的人物吗？
-……
-雷斯教授用外国人特有的习惯耸了耸肩表示了否定
-回头看向小巷子，当然没有类似的人影
-…那么，是我的错觉吗？
-一定是那样的，日本可是世界治安第一的国家啊
-是…那样么？
-真帆接下来准备怎么办？
-我……
-对于之后没有说出口，只是望向了我的真帆，雷斯教授察觉到了什么吧
-嗯哼，原来如此，这么一回事。那么，我先走了，有机会也和伦太郎慢慢的聊一聊
-Bye！
-意味深长地抛了个媚眼之后离开了
-虽然走向了与车站相反的方向，这样好么？
-话说，感觉又被奇怪地误会了的样子，不过一一反驳也嫌麻烦
-就是这样，她就是比屋定小姐。之前在研讨会上遇到的事，有说过吧
-兴师动众的真是对不起
-顺其自然地带着真帆回到了Lab，大家都在等着我回来
-铃羽似乎还出去了一次，据说那时已经看不到我的身影了
-算了，但是什么事都没有太好了
-大致上地解释与介绍结束后终于大家都可以歇一下了
-虽然真帆想问各种关于Lab的事，但是我有不得不先完成的事
-对不起…说到哪里了…
-说到其他也有人在寻找篝炭的事
-是，是的
-那个…是真的吗？桐生小姐
-……真的……
-再次着眼与调查报告，发现详细地写着
-萌郁为了证实，连信用调查社也用上了
-也就是说，可信度是足够大的
-那有是指铃羽的可能性吗？
-我也考虑过这点，但是……
-…找人的人是男的…其中也有外国人…
-外国人？
-他们为什么找篝？
-这个时代与篝有关联的只有我，可是为什么，到底是谁……
-难道说是，SERN！？
-SERN发现篝是从未来来的，所以在搜寻她…这样？
-但是那样的话萌郁应该没有理由不知道……
-不，Rounder的行动都是直接分别指示的，不知道其他的Rounder在做什么也没什么奇怪的
-椎名篝来到这里已经12年了，在其间交了朋友也没什么奇怪的吧……
-话说，如果不受谁照顾的话，反而无法生存下去的吧
-是这么一回事的吧
-也就是说，从这份报告里能知道的是
-知道椎名篝的某人最近因为某种理由正在寻找她这件事
-也就是说直到最近为止，椎名篝还活着
-……！
-啊，是啊
-只要不是像铃羽一样能穿越时代，有人在寻找她的话，也就是说篝也同样从他们面前消失了，应该是这么一回事吧。
-寻找篝的人出现是在最近1、2个月，也就是说直到最近她还活着的可能性很大
-从萌郁的报告里无法知道更多的事了
-怎么…办？
-…能拜托继续调查吗？
-寻找篝的那群人在秋叶原地界这，也就是说，果然她也在这附近也说不定
-…知道了
-萌郁暂且收下了至今的报酬，然后离开了Lab
-至于付费，暂时由桶子出钱
-虽然说是未来的，是女儿的事的话，桶子还是会娇惯她呢
-在找人吗？
-到刚才为止一直兴趣满满地在Lab里转悠的真帆问道
-恩，找个朋友……
-寻找椎名篝的人里有外国人这点，果然还是很在意
-呐，冈伦今天准备什么时候回家？
-嗯？有什么事吗？
-遇到伯母了，晚饭拜托给我了
-伯母被叫去商店街的会议了，正在烦恼晚饭该怎么办
-“由我真由理来做吧”这么说了，伯母说“拜托了——”
-没问题吗？真由理你也很忙吧，不要勉强哦
-完全没问题，我会做好吃的东西的，你早点回来哦
-是么
-真的？
-认真的？
-等着你哦
-即使不是SERN，知道是时间机器的存在就会飞奔而来的人存在于世界各地
-如果篝不小心被知道了是来自未来的人，因此被卷入了什么事件之中的话……
-那么，冈伦，差不多该详细的介绍下比屋定氏了吧
-就算说要详细点，之前也说明过了吧
-她是雷斯吉宁教授的助手，和教授都对我很亲切。偶尔让我为研究帮忙，以前也说过这样的说明
-比如有把说比屋定氏加入这个Lab的成员这样的神展开吗？
-没有吧
-那么至少，让我叫真帆炭可以吗？话说我就这么叫了
-真帆…炭？
-哎？名字弄错了？
-不是那样！是在意那奇怪的称呼方式
-但是，真帆炭就是真帆炭的感觉，是吧，冈伦
-别扯上我
-总之，别用那样的称呼
-但是，我拒绝
-这家伙又来了…
-那么，比屋定小姐，今天为什么来Lab？我有和你说过这里的事吗？
-我让“Amadeus”告诉我的
-今天…本来有事想说的，但是算了
-见到了传闻中的Lab，另外，你们也很忙的样子
-难道说，她，生气了吗？
-恩，非常的生气。说她怎么联络你也不接
-…和想象的一样呢
-哎？等，什么什么？你们在说什么？
-并不是八卦的事，不用特别在意……
-…冈部先生，果然很辛苦吗？那么放弃测试员也……
-不，不是那样的。只是……
-…厌恶那样依存于她的自己
-…心情好的时候再和她聊聊吧，那孩子也觉得寂寞呢
-…知道了
-对于“正觉得寂寞”这句话，心里略微有点作痛
-即使那样，我这天，也没有和“红莉栖”会话
-从萌郁那里听到关于椎名篝的报告之后，已经经过了很多天。
-昨晚确认了一下，据说那之后调查就没有进展。
-萌郁也有她的杂志社校对工作，没有太多时间吧。
-虽然对寻找椎名篝的家伙的存在感到不安，但也不能让她把原来的业务放下，来让她忙这边的事情吧。
-哈呜~真由喜非常伤心……
-嗯？难道是圣诞节派对的事情吗？
-嗯。枫和吹雪酱，有事情了。
-菲莉丝酱也要忙着工作~，绹酱也要和店长一起过~
-桶子说要和由季一起去玩。
-不是挺好吗。 
-据说铃羽做了许多准备。
-铃羽一直抱怨为什么桶子不能对由季有个明确的态度。
-对铃羽来说，这可是关系自己存在的事情。虽说是注定的关系，但也可能因为一些原因而发展不顺利。
-而且即使是铃羽，也想看在这个和平年代里父亲和母亲关系好的样子吧。
-如果能因此有所进展的话，她也会比较放心吧。
-真由理圣诞节也在家过比较好吧？在这之前，叔叔订了蛋糕哦。
-你见过爸爸了？
-在家附近偶然遇到的。说是为了给真由理惊喜，一鼓作气定了一个大蛋糕。
-这样啊……嗯~那，还是回家吧。
-啊，话先说前面，刚才的话当作没听见吧，难得叔叔给你的大惊喜。
-嗯，我知道了啦。但是冈伦怎么办，圣诞节。
-没有什么特别的计划啊。我家本来就是不会过那样的节的。
-大学的家伙们说要开“只有男性的圣诞节饮酒会”，但我没有被邀请。
-就算说了多少遍不是，那些家伙们还是把真由理当作我的女朋友，还各种羡慕嫉妒恨。
-没记错的话，你说了想要圣诞老人的礼物之后，结果早上起来枕头旁边放了蔬菜对吧？
-不管怎么看都是昨天卖剩的。抱怨之后，还反过来教训说我们家又不信基督教。
-仔细想想，那种教育下真亏我没有踏入歪门邪道啊。
-……不过，也很难说我所走过的路有多正经。
-圣诞节过完了之后，有CM，然后就是正月了。一年一眨眼就过去了呢~
-也是呢……
-也不能说是一眨眼吧。
-因为我，无数次地重复了那个时间。
-不如说是非常漫长的一年。
-对啦！呐，冈伦。虽然圣诞节派对不能开了，但是开正月派对怎么样？
-大家一起去祭拜~，然后一起吃年夜饭~，说今年也请多指教~
-……啊，不是挺好的吗。
-对吧对吧~。嗯，之后问问大家呢~
-真由理那么说着，缓缓的站了起来。
-于是，真由喜要去买东西了。
-买东西？
-嗯。吹雪酱的cos服，突然需要一个小物件。
-这样啊，小心点去哦。
-嗯。
-对啦，冈伦，琉华子好像有要和冈伦商量的事情。
-啊……
-说起来这之前，琉华子打过一个电话。
-那之后，萌郁也来了发生了很多的事，就把它抛在脑后了。
-琉华子因为我说过了之后联络的关系，可能一直在等着电话也不一定。
-我知道了，这边会打电话过去的。
-嗯，拜托了~
-那，我出门~了。
-真由理穿上了外套之后，向我挥了挥手从房间里出去了。
-那，向琉华子打电话吧。
-……
-话说回来，商量吗……。
-到底是什么呢。
-不会又说想变成女孩子，之类的话吧。
-不，怎么说也应该不是那个。
-那是因为电话微波炉（暂定）的存在，第一次听到的请求。
-但是，那到底是……。
-算了，问问就知道了。
-（琉华子这家伙，不接啊……）
-没办法。
-总之发个RINE吧。
-把事情给打出来——。
-发送——。
-对不起，上次电话的事情，我给忘记了。
-然后稍微等了一下琉华子的回复，
-但是给琉华子发送的RINE，并没有变成已读。
-是在忙什么事情吗。
-有一瞬，有直接想去琉华子的神社的想法，但是既然忙的话只会给他添麻烦吧。
-在这之后会在方便的时候回信的吧——就在那么想的时候，Lab外面的楼梯响起了脚步声。
-桶子——好像不是。
-是桶子的话会有更重的咚咚声。
-请进。
-你好……
-琉华子……”
-太好了，冈部先生能在这里。
-正是就是刚才想要联系的琉华子。
-对不起。这之前的事情我忘记了。然后我刚才给你打电话了……
-诶？啊，真的……对不起。我这里才是，没有发现。
-看了手机之后，好像没接电话都有罪恶感一样，琉华子的脸上摆出了十分对不起的表情。
-啊，没有关系哦。比起这个很冷吧。进来吧。
-啊，是……
-虽然那么答复了，但是琉华子好像在意后面的东西一样踌躇着。
-那个，冈部先生……那个……关于要商量的事……
-其实……在那之前，有想让你见的人，我把她带来了……可以吗？
-想让我见的人？
-那个……
-琉华子稍稍让开了身体。
-然后，从她背后，冒出了一个女性。
-那个……初次见面……
-……！
-诶？
-假的吧……
-在那里的是……
-红莉栖……
-请多……指教……
-请，请……
-谢谢……
-往杯子里倒进了从塑料瓶里面的茶，那个女性用几乎听不到的声音说道。
-我非常努力地不让拿着杯子的手颤抖。
-坐在对面的沙发上，再一次好好的看了下她的脸。
-（……好像）
-不是像琉华子。
-眼前的女性和那家伙——牧濑红莉栖非常像。
-…………
-不管是茶色的头发，还是上挑的眼睛，还是清澄的脸庞。
-现在好像没有展现出要强的一面，除了这点，可以说是非常像。
-其实第一眼看到她的时候，震惊得心脏都要停止跳动了。
-但是仔细看的话，还是有一些不一样的地方。
-比如说……胸部的大小什么的……。
-…………?
-年龄和我差不多大吧？
-可以看得出比琉华子大。
-确实琉华子好像有姐姐的……难道是这个人吗？
-老实的样子倒是感觉和琉华子很像……
-但是好像听说过他的姐姐和弟弟不一样，更加活泼一点。
-冈部先生？
-啊，没……然后，琉华子。
-琉华……子……？
-啊，失礼了，我那么叫他的。因为……像女孩子一样。
-想了想也是一种失礼的叫法。
-但是已经成为了口癖，想不出有其他的叫法了。
-原来是那样啊。
-女性的表情稍微缓和了。
-果然——很像。
-我小小的吐了一口气，让心跳缓和了。
-于是，琉华子……这个人……？
-那个……以前我也说过了吧？父亲的朋友来我家住。
-啊啊。听说过……难道是她？
-是的。
-被吓到了。
-因为说是琉华子的父亲的熟人，我还以为是个年纪更长些的人。
-啊，不是。更准确地说，是父亲那个熟人带过来的……
-啊……
-那这个人应该不是说晴海之类的话的人吧。
-稍微安心了。
-然后，要谈的事情就是关于这个人的……
-在那之前，请把名字告诉我吧？总不能一直叫她“这个人”吧？
-…………
-因为我的话，面前的女性的表情沉了下来。
-难道我说了什么奇怪的话了吗。
-……其实要商量的，就是这件事。
-那个……要知道这个人是谁……那个，应该怎么办……
-我不能立刻理解那句话的意思。
-……等一下，琉华子。那个是什么意思……
-……好像是……记忆丧失……了
-记忆……丧失？
-是的……
-这样的话，名字也？
-是的……
-就连你是那里的谁也忘了？
-是的……
-为什么……
-我不清楚。
-这是当然的事。
-因为不知道那些事才是记忆丧失。
-但是，为什么要介绍给我？
-我觉得冈部先生的话，也许知道取回记忆的方法所以。
-你看。冈部先生的话，说过很多人类的脑的记忆什么的，很难的话题……
-不管什么都可以！只要有能让我找回自己的方法的话！
-等，等一下。的确我有说过那种话，但是我只是对这个有兴趣而已，并不知道什么专业的事情……”
-我只是知道脑的功能和构造的程度。
-关于记忆丧失是怎么回事，我也知道。
-但是，如果突然问我找回记忆的方法，那就是两回事了。
-就算有最高级的医疗设施，这样的也做不到吧。
-若是像“Amadeus”一样把记忆事先存到了其他地方的话倒是另当别论。
-这……样啊……
-对我的回答，女人显然很失望。
-既，既然这样，有什么可以调查身世的方法呢，佳名真的好像非常痛苦……
-佳名？
-因为是假的名字所以叫佳名，琉华的父亲起的……。说是没有名字很不方便。【校注：日语里“假的名字”和“香菜”也同音】
-还，还真是随意啊……
-可以的吗，那样？
-因为也不是一直叫的名字，所以这种程度就好了，他这么说……
-原来如此，虽然不知道这算不算深思熟虑……。
-冈部先生。有没有什么方法呢。至少只知道名字也好……
-我虽然也想帮忙……，果然还是去拜托信用调查社什么的比较好吧？
-信用调查社……侦探一样的东西吗？
-啊啊，但是就算那样，没有线索一样的东西的话很不好找吧。
-没有带着钱包或者包之类的东西吗？
-那一类的好像什么都没……
-什么都？不是非常重要的东西也可以。一件两件有点线索的东西就行。
-……我只有一个……但是，不清楚这个能不能成为线索……
-佳名小心翼翼地把一个手绢拿了出来。
-被包裹着的，就是那个“唯一一个拥有的东西”吧。
-可以让我看吗？
-可以……
-啊咧？莫非是有客人来了？
-佳名把手绢打开的同时，从玄关响起了真由理柔和的声音。应该是买完东西回来了吧。
-…………
-真有理的后面，铃羽也在。
-好少见的组合啊。是在来这里的路上合流的吗。
-啊，真由理酱。
-啊~。琉华君。
-琉华哥，在那里的人是？
-诶，是住在我家的客人……
-…………
-佳名微微低下头。
-哇~
-真由理不知道为什么用很高兴的声音，看着佳名手绢里的东西。
-那个，是乌帕吧？
-啊……
-确实在佳名手心展开的白色手绢的上面，有着一个已经褪色的乌帕钥匙链。
-你喜欢吗？真由喜也是呢，最喜欢乌帕了。
-………… 
-难道，线索就是那个吗。
-很旧的乌帕钥匙链。
-这样的东西能当作线索吗。
-但是，这个乌帕，是什么时候的东西呐？好像很老的样子……
-这么一说好像是的……
-乌帕是“雷Net翔”这个动漫的吉祥物。
-其商品问世，也只是数年前的事。
-但是眼前的乌帕，看起来已经有相当的年份了。
-这个，原来不是绿色的嘛。因为这个是“森林的妖精”版本的嘛。
-森林的妖精?
-嗯。在这之前放映的电影里出现过。看，真由喜也有这个，但这里的设计有点不一样的。
-虽然她手指着，但我是完全不清楚哪里不一样。
-这个钥匙链呐。一直买不到，所以一直在找它。然后在这之前，琉华君发现后买给我了。呐？
-嗯，偶然看到店里有卖……
-但是好奇怪啊。在这之前的电影的商品的话，应该在不久之前发售的啊。为什么这么旧……嗯？
-……！
-在那时我突然发现，佳名的脸色已经相当糟糕了。
-……哈啊……哈啊……
-没，没关系吧，佳名？
-身体不舒服吗？
-没关……系……
-啊！
-琉华慌乱的支撑起了想要站起来而摇晃的佳名。
-对了，喝点什么冷的东西吧……
-我正要去冰箱拿矿物质水的时候，发现了用愕然的表情看着佳名的铃羽。
-…………
-铃羽？
-……骗，人……
-诶？
-令人惊讶的是，并不止是佳名，就连铃羽的身体也在小小的颤抖。
-骗人……那个……那个乌帕……
-怎么了？铃羽？
-我知道。那个乌帕……那是……
-诶？
-？？？
-喂，喂，铃羽！
-哈啊，哈啊…………
-佳名摇摇晃晃的向着铃羽走了两步，三步。
-难道是——。
-不，不可能吧——。
-但是——。
-……难道，你是……
-哈啊……哈啊……哈啊……
-篝……？
-什——！
-……你是篝！？椎名篝吗！？
-——！
-那句话，让佳名大大的睁开了眼——。
-…………
-慢慢的倒在了那里。
+回去的路上，我再次想起两人的话。  
+“太见外了喵。这什么烦心事跟我们说就好了喵。”  
+“是、是啊。我可能帮不上什么忙……但只是商量的话……”  
+被这么说我才察觉到，我最先商量的不是别人，而是“红莉栖”。我无意识之中打开了APP，去找她说话。她——并不是真的红莉栖。但是，那个声音、动作、话语——  
+“呜……”！  
+一切都让我想起红莉栖。一切都在唤起我那拼命想要扼杀的回忆。  
+手机来电。对方是——“红莉栖”。一定是来抱怨我刚才突然把她的电话挂了的事吧。这行为也不愧是红莉栖。  
+“……”  
+但我并没有接。之后那一天她又打了好几次电话过来，我还是都没接。  
 
 
 <br/>
